[tests] finish with refractoring tests