@@ -8,11 +8,15 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.TestPropertySource;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -21,6 +25,9 @@ import static org.junit.jupiter.api.Assertions.*;
 
 @SpringBootTest
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
+@ContextConfiguration(locations = "classpath:test-context.xml")
+@TestPropertySource("classpath:test.properties")
 public class VideoServiceTest {
 
     @Mock
@@ -29,64 +36,68 @@ public class VideoServiceTest {
     @InjectMocks
     private VideoService videoService;
 
+    @Autowired
     private Video video1, video2;
+
+    private Long video1Id, video2Id;
+
+    @Value("${rating1.score}")
+    private int rating1Score;
+    @Value("${rating2.score}")
+    private int rating2Score;
 
     @BeforeEach
     public void setUp() {
-        MockitoAnnotations.openMocks(this);
-        video1 = new Video();
-        video1.setTitle("Inception");
-        video1.setGenre("Sci-Fi");
-
-        video2 = new Video();
-        video2.setTitle("Titanic");
-        video2.setGenre("Romance");
+        video1Id = 1L;
+        video2Id = 2L;
     }
 
     @Test
     public void testGetAllVideos() {
-        List<Video> videoList = Arrays.asList(video1, video2);
-        when(videoRepository.findAll()).thenReturn(videoList);
+        when(videoRepository.findAll()).thenReturn(List.of(video1, video2));
 
-        List<Video> result = videoService.getAllVideos();
-        assertNotNull(result);
-        assertEquals(2, result.size());
+        List<Video> videos = videoService.getAllVideos();
+        assertNotNull(videos);
+        assertEquals(2, videos.size());
+        assertEquals(video1.getTitle(), videos.get(0).getTitle());
+        assertEquals(video2.getTitle(), videos.get(1).getTitle());
     }
 
     @Test
     public void testGetVideoById() {
-        when(videoRepository.findById(1L)).thenReturn(Optional.of(video1));
+        when(videoRepository.findById(video1Id)).thenReturn(Optional.of(video1));
 
-        Optional<Video> result = videoService.getVideoById(1L);
-        assertTrue(result.isPresent());
-        assertEquals("Inception", result.get().getTitle());
+        Optional<Video> video = videoService.getVideoById(video1Id);
+        assertTrue(video.isPresent());
+        assertEquals(video1.getTitle(), video.get().getTitle());
+        assertEquals(video1.getGenre(), video.get().getGenre());
     }
 
     @Test
     public void testSearchVideosByTitle() {
-        List<Video> videoList = Arrays.asList(video1);
-        when(videoRepository.findByTitleContainingIgnoreCase("inception")).thenReturn(videoList);
+        when(videoRepository.findByTitleContainingIgnoreCase(video1.getTitle())).thenReturn(List.of(video1));
 
-        List<Video> result = videoService.searchVideosByTitle("inception");
-        assertNotNull(result);
-        assertEquals(1, result.size());
+        List<Video> videos = videoService.searchVideosByTitle(video1.getTitle());
+        assertNotNull(videos);
+        assertEquals(1, videos.size());
+        assertEquals(video1.getTitle(), videos.get(0).getTitle());
     }
 
     @Test
     public void testAddVideo() {
-        when(videoRepository.save(video1)).thenReturn(video1);
+        when(videoRepository.save(video2)).thenReturn(video2);
 
-        Video result = videoService.addVideo(video1);
+        Video result = videoService.addVideo(video2);
         assertNotNull(result);
-        assertEquals("Inception", result.getTitle());
+        assertEquals(video2.getTitle(), result.getTitle());
+        assertEquals(video2.getGenre(), result.getGenre());
     }
 
     @Test
     public void testDeleteVideo() {
-        doNothing().when(videoRepository).deleteById(1L);
+        doNothing().when(videoRepository).deleteById(video1Id);
 
-        videoService.deleteVideo(1L);
-        verify(videoRepository, times(1)).deleteById(1L);
+        videoService.deleteVideo(video1Id);
+        verify(videoRepository, times(1)).deleteById(video1Id);
     }
 }
-
